syntax = "proto3";
package fits_proto;

message FileInfo {
    string name = 1;
    // FileType type = 2; Assume HDF5
    sfixed64 size = 3;
    repeated string HDU_list = 4; //Note sure what goes here
    sfixed64 date = 5;
  }
  
  message FileInfoExtended {
    // Number of dimensions of the image file
    sfixed32 dimensions = 1;
    // Width of the XY plane
    sfixed32 width = 2;
    // Height of the XY plane
    sfixed32 height = 3;
    // Number of channels
    sfixed32 depth = 4;
    // Number of Stokes parameters
    sfixed32 stokes = 5;
  }

  message Empty {}
  
  message StatusResponse {
    bool status = 1;
    string statusMessage = 2;
  }
  
  enum RegionType {
    POINT = 0;
    LINE = 1;
    RECTANGLE = 2;
    CIRCLE = 3;
  }

  message Point{
    sfixed32 x = 1;
    sfixed32 y = 2;
  }

  message RegionInfo {
    RegionType regionType = 1;
    repeated Point controlPoints = 2;
  }
  